--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
 theme: jekyll-theme-cayman
+<h1>CURRICULUM VITAE!</h1>
+<p1> je m'appelle mohamet</p1>                                    <p1> 1 Allée Jean de la Bruyère</p1>
+Je suis titulaire d'un bac+2 en Anglais
+
